--- a/sms/index.html
+++ b/sms/index.html
@@ -491,8 +491,7 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://FreeHTML5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						remove the content for the change
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
